// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top ckboxGroup__Test__root ckboxGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__inputLabel"
    id="react-aria-1"
  >
    <span
      className="label__Test__text"
    >
      Field Label
    </span>
  </label>
  <div
    aria-labelledby="react-aria-1"
    className="field__Test__fieldContainer ckboxGroup__Test__group"
    id="cbg1"
    onBlur={[Function]}
    onFocus={[Function]}
    role="group"
  >
    <label
      className="label__Test__root label__Test--hasInput ckbox__Test__root ckbox__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        Label1
      </span>
      <span
        className="ckbox__Test__inputContainer"
      >
        <input
          checked={false}
          className="ckbox__Test__input"
          disabled={false}
          id="cb1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="checkbox"
          value="cb1"
        />
      </span>
    </label>
    <label
      className="label__Test__root label__Test--hasInput ckbox__Test__root ckbox__Test---size-1-1"
    >
      <span
        className="label__Test__text"
      >
        Label2
      </span>
      <span
        className="ckbox__Test__inputContainer"
      >
        <input
          checked={false}
          className="ckbox__Test__input"
          disabled={false}
          id="cb2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="checkbox"
          value="cb2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox renders correctly with custom labelled checkboxes 1`] = `
<div
  className="field__Test__root field__Test---vol-1-3 field__Test---labelPosition-3-top ckboxGroup__Test__root ckboxGroup__Test---orientation-8-vertical"
>
  <label
    className="label__Test__root field__Test__inputLabel"
    id="react-aria-1"
  >
    <span
      className="label__Test__text"
    >
      Field Label
    </span>
  </label>
  <div
    aria-labelledby="react-aria-1"
    className="field__Test__fieldContainer ckboxGroup__Test__group"
    id="cbg1"
    onBlur={[Function]}
    onFocus={[Function]}
    role="group"
  >
    <label
      htmlFor="cb1"
      id="lb1"
    >
      Label1
    </label>
    <label
      className="label__Test__root label__Test--hasInput ckbox__Test__root ckbox__Test---size-1-1"
    >
      <span
        className="ckbox__Test__inputContainer"
      >
        <input
          aria-labelledby="lb1"
          checked={false}
          className="ckbox__Test__input"
          disabled={false}
          id="cb1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="checkbox"
          value="cb1"
        />
      </span>
    </label>
    <label
      htmlFor="cb2"
      id="lb2"
    >
      Label2
    </label>
    <label
      className="label__Test__root label__Test--hasInput ckbox__Test__root ckbox__Test---size-1-1"
    >
      <span
        className="ckbox__Test__inputContainer"
      >
        <input
          aria-labelledby="lb2"
          checked={false}
          className="ckbox__Test__input"
          disabled={false}
          id="cb2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          type="checkbox"
          value="cb2"
        />
      </span>
    </label>
  </div>
</div>
`;
